site/frontend/http-solver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-acme-http-solver
  namespace: default
  annotations:
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
    - host: "dapomogu.tw1.su"
      http:
        paths:
          - path: "/.well-known/acme-challenge/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: cm-acme-http-solver
                port:
                  number: 8089
